# DRF-North-Trans

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  docker-compose.prod.yml  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  requirements.txt
NortTrans/: asgi.py  settings.py  wsgi.py
NortTrans/NortTrans/: asgi.py  settings.py  urls.py  wsgi.py
api/: admin.py  enums.py  models.py  serializers.py  urls.py  views.py
api/admin/: applications.py  user.py
api/migrations/: 0001_initial.py  0002_user_role.py  0003_alter_user_role.py  0005_user_name.py  0006_clientprofile.py  0008_alter_car_options_alter_clientprofile_options_and_more.py  0009_alter_applicationstransport_photo.py  0010_applicationstransport_invoice_and_more.py  0011_alter_applicationstransport_status.py
api/test/: factories.py  models.py  test_models.py
deploy/nginx/: Dockerfile
deploy/python/: Dockerfile
fixtures/: initial_data.json
src/: conftest.py
src/NortTrans/: settings.py  urls.py
src/api/: enums.py  serializers.py  urls.py  views.py
src/api/admin/: __init__.py  car.py  user.py
src/api/migrations/: 0004_auto_20221225_1438.py  0007_car_alter_clientprofile_avatar_driverprofile.py  0012_alter_applicationstransport_options.py
src/api/test/: factories.py  tests.py
