[tool.poetry]
name = "drf-north-trans"
version = "0.1.0"
description = ""
authors = ["Juan-Camilo-Suarez <juancamilosuarez3@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "4.1.3"
djangorestframework = "3.14.0"
python-dotenv = "0.21.0"
psycopg2 = "2.9.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
